tests/baselines/reference/moduleExportAssignment4(strict=true).errors.txt
async.js(1,1): error TS7022: '"async"' implicitly has type 'any' because it does not have a type annotation and is referenced directly or indirectly in its own initializer.


==== async.js (1 errors) ====
    exports.default = { m: 1, a: 1 }
    ~~~~~~~
!!! error TS7022: '"async"' implicitly has type 'any' because it does not have a type annotation and is referenced directly or indirectly in its own initializer.
    module.exports = exports['default'];
    